# BabylonNativeTypescriptSample

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Dependencies/: CMakeLists.txt
Typescript/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.build.config.js
Typescript/app/: package-lock.json  package.json  tsconfig.json
Typescript/app/src/: app.ts
Typescript/deploy/: package-lock.json  package.json  webpack.build.config.js  webpack.dev.config.js
Typescript/src/: index.ts
